# edu_solver

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  edu2d_euler_steady_main_v0.f90
src/basic/: CMakeLists.txt  edu2d_euler_steady_basic_package_v0.f90  gaussian_elimination.f90  input_parameter.f90  vector_operations.f90
src/gradient/: CMakeLists.txt  gradients.f90
src/jacobian/: CMakeLists.txt  edu2d_euler_jacobian_v1.f90
src/linear_solver/: CMakeLists.txt  edu2d_euler_linear_solve_v0.f90  frechet_derivative.f90  gcr_solver.f90  preconditioner.f90
src/residual/: CMakeLists.txt  residual.f90  roe.f90
src/solver/: CMakeLists.txt  edu2d_euler_steady_solver_v0.f90
src/tmp/: CMakeLists.txt  edu2d_euler_steady_basic_package_v0.f90  twod_bump_irregular_grid_v0.f90
